# aoc2024

./: Cargo.toml
src/: d1.rs  d2.rs  d3.rs  main.rs
