[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.23", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
reqwest = "0.12.9"
seq-macro = "0.3.5"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
